<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.appcompat.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="?attr/colorPrimary">

    <!-- 扫描二维码图标 -->
    <ImageView
      android:layout_width="20dp"
      android:layout_height="30dp"
      android:layout_gravity="start"
      android:contentDescription="@string/scan_description"
      android:src="@drawable/scan" />

    <!-- 首页二字 -->
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="30dp"
      android:layout_gravity="center"
      android:text="@string/first_page"
      android:textColor="@color/white"
      android:textSize="20sp" />

    <!-- 搜索图标 -->
    <ImageView
      android:layout_width="20dp"
      android:layout_height="30dp"
      android:layout_gravity="end"
      android:layout_marginEnd="15dp"
      android:contentDescription="@string/search_description"
      android:src="@drawable/search" />

  </androidx.appcompat.widget.Toolbar>

  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:background="@color/bgPurple">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>