<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <androidx.appcompat.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="?attr/colorPrimary">

    <ImageView
      android:id="@+id/person_night_iv"
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_gravity="start"
      android:contentDescription="@string/night"
      android:src="@drawable/night" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="30dp"
      android:layout_gravity="center"
      android:text="@string/fourth_page"
      android:textColor="@android:color/white"
      android:textSize="20sp" />

    <ImageView
      android:id="@+id/person_notice_iv"
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_gravity="end"
      android:layout_marginEnd="15dp"
      android:contentDescription="@string/notice"
      android:src="@drawable/notice" />

  </androidx.appcompat.widget.Toolbar>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary">

      <FrameLayout
        android:id="@+id/collapsingFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:clickable="true"
        app:layout_scrollFlags="scroll">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="250dp"
          android:gravity="center"
          android:orientation="vertical">

          <ImageView
            android:id="@+id/person_avatar_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/avatar" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/logIn"
            android:textColor="@color/white"
            android:textSize="24sp" />

        </LinearLayout>

      </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="fill_vertical"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp">

        <LinearLayout
          android:id="@+id/person_my_score_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/score"
            android:src="@drawable/score" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/score"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="230dp"
            android:contentDescription="@string/goTo"
            android:src="@drawable/go" />

        </LinearLayout>

        <LinearLayout
          android:id="@+id/person_my_collect_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/person_my_score_layout">

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/myCollect"
            android:src="@drawable/share" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/myCollect"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="230dp"
            android:contentDescription="@string/goTo"
            android:src="@drawable/go" />

        </LinearLayout>

        <LinearLayout
          android:id="@+id/person_my_read_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/person_my_collect_layout">

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/read"
            android:src="@drawable/read" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/read"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="230dp"
            android:contentDescription="@string/goTo"
            android:src="@drawable/go" />

        </LinearLayout>

        <LinearLayout
          android:id="@+id/person_my_history_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/person_my_read_layout">

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/history"
            android:src="@drawable/history" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/history"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="230dp"
            android:contentDescription="@string/goTo"
            android:src="@drawable/go" />

        </LinearLayout>

        <LinearLayout
          android:id="@+id/person_my_github_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/person_my_history_layout">

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/github"
            android:src="@drawable/github" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/github"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="230dp"
            android:contentDescription="@string/goTo"
            android:src="@drawable/go" />

        </LinearLayout>

        <LinearLayout
          android:id="@+id/person_my_about_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/person_my_github_layout">

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/about"
            android:src="@drawable/about" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/about"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="100dp"
            android:text="@string/donate"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp" />

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/goTo"
            android:src="@drawable/go" />

        </LinearLayout>

        <LinearLayout
          android:id="@+id/person_my_setting_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:clickable="true"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/person_my_about_layout">

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/setting"
            android:src="@drawable/setting" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/setting"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

          <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="230dp"
            android:contentDescription="@string/goTo"
            android:src="@drawable/go" />

        </LinearLayout>

      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/bottomNavigationView"
      android:layout_width="match_parent"
      android:layout_height="75dp"
      android:layout_gravity="bottom"
      app:menu="@menu/bottom_nav_menu" />

  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>